--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="profile-container">
                 <div class="name-container">
                     <object data="account-circle.svg" type="image/svg+xml" class="profile-icon"></object>
-                    <p>Hi there, <br> John Doe(@jogn)</p>
+                    <p>Hi there, <br> <span class="name"> John Doe(@john_doe)</span></p>
                 </div>
                 <div class="buttons-container">
                     <button type="button">New</button>
