--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
                 <div class="card">
@@ -136,10 +135,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
                 <div class="card">
@@ -152,10 +150,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
                 <div class="card">
@@ -168,10 +165,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
                 <div class="card">
@@ -184,10 +180,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
                 <div class="card">
@@ -200,10 +195,9 @@
                         </p>
                     </div>
                     <div class="card-actions">
-                        <!--SVGS-->
-                        <img src="#">
-                        <img src="#">
-                        <img src="#">
+                        <object data="star.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="eye.svg" type="image/svg+xml" class="card-action"></object>
+                        <object data="fork.svg" type="image/svg+xml" class="card-action"></object>
                     </div>
                 </div>
             </div>
